[gd_scene load_steps=5 format=3 uid="uid://yddpgwccicir"]

[ext_resource type="Script" uid="uid://p16nn0xvchls" path="res://cookingui.gd" id="1_vnhsg"]
[ext_resource type="Theme" uid="uid://det0qn7kh5ncx" path="res://Themes/cooking.tres" id="2_brg0g"]
[ext_resource type="Theme" uid="uid://g7m5g0d7vfiw" path="res://Themes/internal.tres" id="2_vnhsg"]
[ext_resource type="PackedScene" uid="uid://51ra61upblee" path="res://ModelPreview3D.tscn" id="3_brg0g"]

[node name="CookingUI" type="CanvasLayer"]
script = ExtResource("1_vnhsg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.206
anchor_top = 0.231
anchor_right = 0.794
anchor_bottom = 0.769
offset_left = -0.312012
offset_top = -0.188004
offset_right = 0.311951
offset_bottom = 0.187958
pivot_offset = Vector2(339, 174.5)
theme = ExtResource("2_brg0g")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052
anchor_top = 0.052
anchor_right = 0.296
anchor_bottom = 0.181
offset_left = -0.256001
offset_top = -0.148001
offset_right = 0.311996
offset_bottom = -0.169003
theme_override_colors/font_outline_color = Color(0.0784314, 0.117647, 0.188235, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 26
text = "Cooking"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.372
anchor_top = 0.206
anchor_right = 0.957
anchor_bottom = 0.636
offset_left = -0.216003
offset_top = 0.105995
offset_right = 0.153992
offset_bottom = 0.0359802
grow_horizontal = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.412
anchor_top = 0.814
anchor_right = 0.588
anchor_bottom = 0.923
offset_left = -0.336029
offset_top = -0.0859985
offset_right = 0.335999
offset_bottom = -0.127014
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.047
anchor_top = 0.206
anchor_right = 0.323
anchor_bottom = 0.63
offset_left = 0.133999
offset_top = 0.105995
offset_right = 0.0059967
offset_bottom = 0.129974
pivot_offset = Vector2(0, 0.5)
theme = ExtResource("2_vnhsg")

[node name="ItemDescription" type="Label" parent="Panel/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_top = 1.088
anchor_right = 3.299
anchor_bottom = 1.358
offset_left = 0.0079999
offset_top = -0.0239563
offset_right = 0.0869751
offset_bottom = 1.01605
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 11.0
offset_right = 178.0
offset_bottom = 137.0

[node name="SubViewport" type="SubViewport" parent="Panel/Panel/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(169, 126)
render_target_update_mode = 4

[node name="ModelPreview3D" parent="Panel/Panel/SubViewportContainer/SubViewport" instance=ExtResource("3_brg0g")]
